Fix email stats heading spacing
[PREMIUM-146]

--- a/assets/css/src/generic/_typography.scss
+++ b/assets/css/src/generic/_typography.scss
@@ -24,6 +24,7 @@ h5.mailpoet-h5 {
   font-weight: bold;
   line-height: $heading-line-height;
   margin: $grid-gap 0;
+  padding: 0;
 }
 
 h1.mailpoet-h0 { font-size: $heading-font-size-h0; }
